c2prj1_cards/grade.txt
Grading at Tue Sep 22 01:20:03 UTC 2020
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:55:1: error: ISO C forbids nested functions [-Werror=pedantic]
 char value_letter(card_t c) {
 ^
cards.c: In function ‘value_letter’:
cards.c:60:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "2";
            ^
cards.c:64:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "3";
            ^
cards.c:68:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "4";
            ^
cards.c:72:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "5";
            ^
cards.c:76:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "6";
            ^
cards.c:80:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "7";
            ^
cards.c:84:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "8";
            ^
cards.c:88:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "9";
            ^
cards.c:92:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "0";
            ^
cards.c:96:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "J";
            ^
cards.c:100:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "Q";
            ^
cards.c:104:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "K";
            ^
cards.c:108:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "A";
            ^
cards.c:112:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "?";
            ^
cards.c:117:1: error: ISO C forbids nested functions [-Werror=pedantic]
 char suit_letter(card_t c) {
 ^
cards.c: In function ‘suit_letter’:
cards.c:122:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "s";
            ^
cards.c:126:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "h";
            ^
cards.c:130:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "d";
            ^
cards.c:134:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "c";
            ^
cards.c:138:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return "?";
            ^
cards.c:143:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void print_card(card_t c) {
 ^
cards.c:149:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_letters(char value_let, char suit_let) {
 ^
cards.c: In function ‘value_letter’:
cards.c:229:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_num(unsigned c) {
 ^
cards.c:236:1: error: expected declaration or statement at end of input
 }
 ^
cards.c: In function ‘ranking_to_string’:
cards.c:236:1: error: expected declaration or statement at end of input
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
